<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"

    >


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/main_menu"
        app:navigationIcon="@drawable/_color"
        app:title="@string/page_title"
        app:titleTextColor="@color/sfera">

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/shape_background"
                android:src="@drawable/imahe_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/raiting"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/elevation"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:lineSpacingExtra="-5sp"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"


                app:layout_constraintStart_toStartOf="@+id/avatar">


            </TextView>

            <TextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/profile_name"
                android:textAppearance="@style/subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar">

            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nickname">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"


                    android:layout_marginBottom="1dp"
                    android:src="@drawable/earth"
                    android:viewportWidth="20"
                    android:viewportHeight="20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </ImageView>


                <TextView
                    android:id="@+id/subtitle"
                    style="@style/subtitle1"
                    android:layout_width="230dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/inter_regular"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/languade"
                    android:translationY="-0.53sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_button1"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/choose"
                    android:textAppearance="@style/icon_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:src="@drawable/place"
                    android:viewportWidth="20"
                    android:viewportHeight="20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textView4"
                    style="@style/subtitle1"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"

                    android:fontFamily="@font/inter_regular"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/Russia"
                    android:translationY="-0.53sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textButton2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"

                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"

                    android:lineSpacingExtra="1sp"
                    android:text="@string/choose"
                    android:textAppearance="@style/icon_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear2">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"

                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="3:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:itemCount="4"
                    tools:listitem="@layout/list">

                </androidx.recyclerview.widget.RecyclerView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@id/linear3"
                tools:layout_editor_absoluteX="24dp">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/quest"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">


                </TextView>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/People"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/sfera"
                android:hint="@string/about_me"
                android:textColorHint="@color/sfera"
                app:boxBackgroundColor="@color/primary"
                app:boxStrokeColor="@color/about"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:counterTextColor="@color/about"
                app:endIconMode="clear_text"

                app:layout_constraintTop_toBottomOf="@id/linear4"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="start"
                    android:maxLength="300"
                    android:text="@string/me_text"
                    android:textColor="@color/sfera">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="296dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="48dp"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="5sp"
                android:text="@string/dream_and_get"
                android:textColor="@color/sfera"
                android:textSize="16sp"
                android:translationY="-2.32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            </TextView>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"

                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:background="@drawable/big_button"
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:text="@string/wishes"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/sfera"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />


            <TextView
                android:id="@+id/textView6"
                style="@style/moment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:text="@string/moments"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="SpeakableTextPresentCheck"
                tools:itemCount="5"
                tools:listitem="@layout/list2">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:text="@string/chronicles"
                style="@style/moment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7"
                app:spanCount="3"
                tools:itemCount="12"
                tools:listitem="@layout/list3">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>




</LinearLayout>

